<resources>
    <string name="app_name">Popular Movies</string>
    <string name="title_activity_main">Popular Movies</string>
    <string name="try_again">Try again</string>
    <string name="error_get_movie_list">An error occurred while trying to get the movies. Please, try again.</string>
    <string name="orderby_dialog_title">Select the list\'s ordenation</string>
    <string name="select">Select</string>
    <string name="sortby_rating">Rating</string>
    <string name="sortby_popular">Popular</string>
    <string name="refresh">Refresh</string>
    <string name="sort">Sort</string>
    <string name="movie_detail">Movie detail</string>
    <string name="release_date">Release date</string>
    <string name="user_rate">User rate</string>
    <string name="cancel">Cancel</string>
    <string name="movie_detail_poster_content_description">This is the poster of the detailed movie</string>
    <string name="tab_popular">Popular</string>
    <string name="tab_rating">Rating</string>
    <string name="tab_favorite">Favorite</string>
    <string name="movie_detail_backdrop_content_description">Backdrop of the movie\'s detail</string>
    <string name="empty_favorite_list">Your favorite movie list is empty. \nYou can add movies tapping on the heart in detail\'s screen :)</string>
    <string name="reviews">Reviews</string>
    <string name="error_remove_favorite_movie">An error occurred while tried to remove the favorite movie :(</string>
    <string name="error_add_favorite_movie">An error occurred while tried to add the favorite movie :(</string>
    <string name="success_remove_favorite_movie">Removed the movie from favorite list</string>
    <string name="success_add_favorite_movie">Added the movie to the favorite list</string>
    <string name="read_more">Read more</string>
    <string name="show_all_reviews">Show all reviews</string>
    <string name="the_list_is_empty">The list is empty</string>
    <string name="there_is_no_reviews_to_show">There is no reviews to show</string>
    <string name="trailers">Trailers</string>
    <string name="show_all_trailers">Show all trailers</string>
    <string name="there_is_no_trailers_to_show">There is no trailers to show</string>
    <string name="press_the_button_to_watch_the_trailer">Press the button to watch the trailer</string>
    <string name="youtube">YouTube</string>
    <string name="screen_size_trailer">%1$dp</string>
</resources>
